# SOIL

./: .travis.yml  CMakeLists.txt  premake4.lua
include/: SOIL.h
src/: SOIL.c
travis/: build_sil.sh
